# onnx-mlir-einsum

./: MLIR.cmake
.github/workflows/: macos-amd64-build.yml
docs/Dialects/: onnx.md
docs/doc_example/: CMakeLists.txt  gen_add_f16_onnx.py  main.c  main_f16.c  main_f16.cpp
src/: InitMLIRPasses.hpp  InitOMPasses.hpp  onnx-mlir.cpp
src/Builder/: ElementsBuilder.hpp  FrontendDialectHelper.cpp  FrontendDialectHelper.hpp  FrontendDialectTransformer.cpp  FrontendDialectTransformer.hpp  OpBuildTable.inc
src/Compiler/: CMakeLists.txt  CompilerDialects.cpp  CompilerDialects.hpp  CompilerOptions.cpp  CompilerOptions.hpp  CompilerPasses.cpp  CompilerPasses.hpp  CompilerUtils.cpp  CompilerUtils.hpp  DisposableElementsBuilder.cpp  DisposableElementsBuilder.hpp  DisposableGarbageCollector.cpp  DisposableGarbageCollector.hpp  ElementsBuilders.cpp  ElementsBuilders.hpp  raw_line_ostream.cpp  raw_line_ostream.hpp
src/Dialect/: CMakeLists.txt
src/Interface/: CMakeLists.txt  (+9 more)
src/Transform/: CMakeLists.txt  ConstantFoldableAnalysisPass.cpp  ConstantFoldablePropagationPass.cpp  ConstantFoldingPass.cpp  LazyConstantFoldingPass.cpp  LazyFoldableAnalysisPass.cpp  LazyFoldablePropagationPass.cpp  ResourceGarbageCollector.cpp
src/Transform/ONNX/: CMakeLists.txt  ConstProp.cpp  ConstProp.hpp  ConstProp.td  ConstPropHelper.cpp  ElementsComputer.cpp  ElementsComputer.hpp  InstrumentPass.cpp  LazyConstPropONNXPass.cpp  ONNXOpTransformPass.cpp  ScrubDisposablePass.cpp  ShapeInferencePass.cpp  SimplifyShapeRelatedOps.cpp
utils/: check-docs-example.sh  gen_onnx_mlir.py
(+180 files in other folders)
